# aoc-2022

./: .gitignore  README.md  pyproject.toml
aoc_2022/: day_01.py  day_02.py  day_03.py  day_04.py  utils.py
src/: day_05.py  day_06.py  day_07.py  utils.py
